2012-04-04  John D. Ramsdell  <ramsdell@mitre.org>

	* NEWS: Converted the file to use outline format.

2012-04-03  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Import/Export): Added an example showing
	/etc/passwd as the source of a database table.

	* Makefile.am (dist_noinst_SCRIPTS): Added the datalogimport and
	datalogexport scripts.

2012-04-02  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Import/Export):  Added a new chapter describing
	how to import and export tab seperated values.

2012-04-01  John D. Ramsdell  <ramsdell@mitre.org>

	* interp.c (print_answers_as_tab_separated_values): Added the -t
	option that prints answers using tab separated values.

	* datalog.texi (Extending): Added a reference to the addition
	primitive comment in datalog.lua.in.

	* datalog.lua.in (add_iter_prim): Added a comment that shows how
	to add addition as a primitive.

	* datalog.lua.in (mk_intern): Coerced identifiers to be interned
	into a string instead of relying on callers to always provide a
	string.

2012-02-25  John D. Ramsdell  <ramsdell@mitre.org>

	* lua/*: Updated Lua sources to version 5.1.5.

2012-01-19  John D. Ramsdell  <ramsdell@mitre.org>

	* git: Tagged as datalog-1_8 with tag v1.8.

	* datalog.c (dl_open): Fix standard library loading for Lua 5.2.

	* datalog.c (dl_ask): Replace use of lua_strlen and lua_tostring
	with lua_tolstring.

	* datalog.lua.in: Replaced table.getn with #.

	* interp.c (interp, print_version): Remove compiler warnings about
	testing against a constant address.

	* bin2c.c (print_version): Remove compiler warnings about testing
	against a constant address.

	* configure.ac: Corrected the NO_LUA test.  Added check for
	lauxlib.h.  Changed lua function used in lua library check from
	lua_pcall to lua_pushboolean, as lua_pcall is a macro in Lua 5.2.

2012-01-18  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.lua.in, COPYING.LIB: Fixed the address of the Free
	Software Foundation.
