@@ -27,6 +27,9 @@ Send output to a file (default is standard output).
 .B \-i
 Enter interactive mode after loading input file.
 .TP
+.BI \-l\  FILE
+Load extensions written in Lua.
+.TP
 .B \-t
 Print output as tab separated values.
 .TP
